# 42_Kalman

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  run_imu_sensor_stream.sh  run_kalman.sh
include/: Application.hpp  KalmanFilter.hpp  UdpSocket.hpp  motion_model.hpp
include/data/: acceleration.hpp  direction.hpp  imu.hpp  position.hpp  print.hpp  speed.hpp
include/parser/: EventParser.hpp  MessageParser.hpp
src/: Application.cpp  CMakeLists.txt  KalmanFilter.cpp  UdpSocket.cpp  main.cpp  motion_model.cpp
src/data/: print.cpp
src/parser/: EventParser.cpp  MessageParser.cpp
